# project_5.0

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: main.py  utils.py
tests/: conftest.py  test_main.py  test_max.py  test_sum.py
