[project]
name = "project-5-0"
version = "0.1.0"
description = ""
authors = [
    {name = "ALEXANDR_SH",email = "sandro.86@bk.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pre-commit (>=4.5.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "project_5"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
