[tool.poetry]
name = "project-5-0"
version = "0.1.0"
description = ""
authors = [
    {name = "ALEXANDR_SH",email = "sandro.86@bk.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pre-commit (>=4.5.1,<5.0.0)"
]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"

# Группа зависимостей для линтинга (dev-зависимости)
poetry-core = ">=2.0.0"
covdefaults = "^2.3.0"

[tool.poetry.group.lint.dependencies]
black = ">=25.11.0,<26.0.0"
flake8 = ">=7.3.0,<8.0.0"
isort = ">=7.0.0,<8.0.0"
mypy = ">=1.19.0,<2.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

#[build-system]
#requires = ["poetry-core>=2.0.0,<3.0.0"]
#build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 119
target-version = ['py38', 'py39', 'py310', 'py311']
skip-string-normalization = true
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 119
skip = [
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    "build",
    "dist"
]
multi_line_output = 3           # Vertical Hanging Indent (скобки)
force_grid_wrap = 2             # Оборачивать в скобки, если 2+ импорта
include_trailing_comma = true   # Запятая в конце — для удобства Git
lines_after_imports = 2         # Пустая строка после блока импортов
combine_as_imports = true
force_sort_within_sections = true
known_first_party = "src"  # ← замените на имя вашего пакета

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
exclude = [
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    "build",
    "dist"
]

# Применить настройки ко всем модулям, начинающимся с "test_"
#[tool.mypy."test_*"]
#ignore_errors = true

#[[tool.mypy.overrides]]
#module = ["tests.*", "test_*"]
#disallow_untyped_defs = false
#warn_return_any = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
warn_return_any = false


[tool.poetry.scripts]
lint = "scripts.lint:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test*"]
